# data-engineering-roadmap

./: 404.html  Diagrama sem nome.drawio  README.md  index.html  main.py  objects.inv  pyproject.toml  vendas.db
00-automacao-data-qualiy-excel-etl/: .gitignore  README.md  pyproject.toml  requirements.txt
00-automacao-data-qualiy-excel-etl/data/: Vendas-fail_2.xlsx  Vendas-ok.xlsx  csv_invalido.csv  csv_valido.csv  failure_2.xlsx  vendas_failure.xlsx  vendas_success.xlsx
00-automacao-data-qualiy-excel-etl/docs/: app.md  backend.md  contratos.md  frontend.md  index.md  streamlit.md
00-automacao-data-qualiy-excel-etl/src/: app.py  backend.py  contrato.py  frontend.py
00-automacao-data-qualiy-excel-etl/tests/: test_app.py
02-pydantic-data-quality-e-tdd-aplicado-em-projeto-de-dados/: .gitignore  README.md  inferred_schema.json  mkdocs.yml  my_duckdb.db  pyproject.toml  schema_crm.py
02-pydantic-data-quality-e-tdd-aplicado-em-projeto-de-dados/.github/workflows/: CI.yml
02-pydantic-data-quality-e-tdd-aplicado-em-projeto-de-dados/app/: etl.py  etl_infer_schema.py  ler_duckdb.py  schema.py  schema_email.py
02-pydantic-data-quality-e-tdd-aplicado-em-projeto-de-dados/docs/: index.md
02-pydantic-data-quality-e-tdd-aplicado-em-projeto-de-dados/exemplo/: exemplo00.py  exemplo01.py  exemplo02.py
02-pydantic-data-quality-e-tdd-aplicado-em-projeto-de-dados/sql/: create_table_produtos_bronze.sql  create_table_produtos_bronze_email.sql  insert_into_tabela_bronze.sql  insert_into_tabela_bronze_email.sql  insert_wrong_values_into_tabela_bronze.sql
02-pydantic-data-quality-e-tdd-aplicado-em-projeto-de-dados/tests/: test_func_etl.py
03-deploy-de-apps-dados-com-docker/: README copy.md  pyproject.toml
03-deploy-de-apps-dados-com-docker/src/dashboard/: Dockerfile  app.py  requirements.txt
05-redis-mongodb-esse-tal-de-nosql/: .env-example  README.md  pyproject.toml
05-redis-mongodb-esse-tal-de-nosql/docker/: docker-compose.yml
05-redis-mongodb-esse-tal-de-nosql/src/: start.py
05-redis-mongodb-esse-tal-de-nosql/src/browser/: b_ml_simple.py  generic_crawler.py
05-redis-mongodb-esse-tal-de-nosql/src/browser/crawlers/: default_crawler.py
05-redis-mongodb-esse-tal-de-nosql/src/browser/provider/: generic_b_crawler.py
05-redis-mongodb-esse-tal-de-nosql/src/browser/provider/actions/: dict.py
05-redis-mongodb-esse-tal-de-nosql/src/mitm/: start.py
05-redis-mongodb-esse-tal-de-nosql/src/mitm/addon/: proxy_controller.py
05-redis-mongodb-esse-tal-de-nosql/src/mitm/test/: download.py  ip.py  mitmproxy-ca-cert.pem
05-redis-mongodb-esse-tal-de-nosql/src/request/: generic_crawler.py  r_ml_simple.py
05-redis-mongodb-esse-tal-de-nosql/src/request/crawlers/: default_crawler.py
05-redis-mongodb-esse-tal-de-nosql/src/tools/: mongodb.py  redis.py
06-restAPI-fastAPI-deploy/rinha_backend/: Dockerfile  nginx.conf  pyproject.toml  requirements.txt
06-restAPI-fastAPI-deploy/rinha_backend/app/: database.py  main.py  models.py  schemas.py
06-restAPI-fastAPI-deploy/segundo/fabio-api-crud/: docker-compose.yml  pyproject.toml
06-restAPI-fastAPI-deploy/segundo/kaio-auth-fastapi-docker/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
06-restAPI-fastAPI-deploy/segundo/kaio-auth-fastapi-docker/src/: main.py
08-kafka-pubsub-streaming/: README.md  docker-compose.yml  pyproject.toml
08-kafka-pubsub-streaming/kafka-brokers/: README.md
08-kafka-pubsub-streaming/kafka-consumers/: README.md  kafka_consumers.py  kafka_consumers_02.py  messages.csv
08-kafka-pubsub-streaming/kafka-demo/: README.md
08-kafka-pubsub-streaming/kafka-ecosystem/: README.md
08-kafka-pubsub-streaming/kafka-ecosystem/kafka-connect/: README.md  kafka_consumer_connect.py
08-kafka-pubsub-streaming/kafka-ecosystem/ksqlDB/: README.md
08-kafka-pubsub-streaming/kafka-ecosystem/schema_registry/: README.md
08-kafka-pubsub-streaming/kafka-marketing-project/: README.md  docker-compose.yml
08-kafka-pubsub-streaming/kafka-marketing-project/consumer/: Dockerfile  consumer.py  requirements.txt
08-kafka-pubsub-streaming/kafka-marketing-project/dashboard/: Dockerfile  dashboard.py
08-kafka-pubsub-streaming/kafka-marketing-project/producer/: Dockerfile  producer.py  requirements.txt
08-kafka-pubsub-streaming/kafka-producers/: README-producers.md  kafka_producers.py
08-kafka-pubsub-streaming/kafka-topics-partitions/: README.md
08-kafka-pubsub-streaming/python-client/: Dockerfile  consume.py  produce.py  requirements.txt  run.sh
09-streamlit-dashboard-realtime/: README.md  app.py  pyproject.toml
09-streamlit-dashboard-realtime/exemplo/: main.py  main_exercicio.py  survey_data.csv
09-streamlit-dashboard-realtime/exemplo_erros_ruff/: erros_ruff.py
09-streamlit-dashboard-realtime/exemplo_libs_grafico/: exemplo.py
09-streamlit-dashboard-realtime/projeto_coleta/: coleta.py  coleta_postgres.py  coleta_postgres_psycopg2.py  coleta_postgres_sqlalchemy.py
09-streamlit-dashboard-realtime/projeto_dash/: dash.py  dash_postgres.py  dash_postgres_cache.py
09-streamlit-dashboard-realtime/survey/: README.md  dash.py  dash_postgres.py  exemplo.env
Bootcamp - Python para dados/aula06/aovivo/: .flake8  .pre-commit-config.yaml  README.md  main_02.py  pyproject.toml
Bootcamp - Python para dados/aula06/aovivo/helper/: azure.py
Bootcamp - Python para dados/aula07/aovivo/: README.md  cliente.py  desafio.py  main.py  pyproject.toml  vendas.csv
Bootcamp - Python para dados/aula16/: create.py  database.db  main.py  pyproject.toml  read.py  read_ops.py  read_ops_2.py  read_sql.sql
Bootcamp - Python para dados/aula16/planejado/: exemplo_05_pydantic.py  exemplo_classe_validador.py
WSL/: readme.md
bootcamp/aula08/aovivo/: .python-version  README.md  pyproject.toml
bootcamp/aula18/: README.md  exemplo_02_json.py  json_exemplo.py  pokemon.db  pyproject.toml
bootcamp/aula18/src/: schema.py
bootcamp/aula20/: .gitignore  pyproject.toml
bootcamp/aula20/backend/: crud.py  database.py  main.py  requirements.txt  router.py  schemas.py
(+371 files in other folders)
